@@ -1,3 +1,6 @@
+2017-10-14 (0.12.10)
+	COMMON: performance optimisations
+
 2017-10-07 (0.12.10)
 	COMMON: Fix var scope errors reported by cppcheck
 	COMMON: dirwalk callback now provides properties path,name,depth,mtime,size,dir
